--- a/project-manager.html
+++ b/project-manager.html
@@ -40,19 +40,23 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584960'>Stellenangebot: Project Manager Marketing BI (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://www.loxo.co/job/278570?t=1571691989993'>Senior Digital Project Manager - My Marketing Recruiter</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584960'>Stellenangebot: Project Manager Marketing BI (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698280122-information-assurance-program-manager-ia-pm-'>MindPoint Group, LLC Information Assurance Program Manager (IA PM) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qreer.com/jobs/view/12170/project-manager-with-agile-experience'>Project Manager with Agile experience Job in Veldhoven, Netherlands</a></h5> 
+<h5><a href='https://www.qreer.com/jobs/view/12170/project-manager-with-agile-experience'>Project Manager with Agile experience Job in Veldhoven, Netherlands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698450736-project-manager-im-business-development-d-m-w-'>Auto1 Project Manager im Business Development (d/m/w) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698450736-project-manager-im-business-development-d-m-w-'>Auto1 Project Manager im Business Development (d/m/w) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -92,7 +96,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211097786/Delivery-Residential-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Delivery Residential Project Manager | CV-Library.co.uk | 211097786</a></h5> 
+<h5><a href='https://www.cv-library.co.uk/job/211097786/Delivery-Residential-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Delivery Residential Project Manager | CV-Library.co.uk | 211097786</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -104,11 +108,11 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/ashoka/job/oNXkbfwZ'>Ashoka Careers - Partnerships and Project Manager Poland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ashoka/job/oNXkbfwZ'>Ashoka Careers - Partnerships and Project Manager Poland</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GoodReturn/743999698443108-nauru-project-manager'>Good Return Nauru Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GoodReturn/743999698443108-nauru-project-manager'>Good Return Nauru Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -168,13 +172,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Linaro.recruiterbox.com/jobs/fk0xu8'>
+<h5><a href='http://Linaro.recruiterbox.com/jobs/fk0xu8'>
     Project Manager at Linaro
 </a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hobsons/job/o7Wsbfwq'>Hobsons Careers - Agile Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/hobsons/job/o7Wsbfwq'>Hobsons Careers - Agile Program Manager</a></h5> 
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -182,7 +186,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436866-implementation-analyst-project-manager-'>Visa Implementation Analyst (Project Manager) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436866-implementation-analyst-project-manager-'>Visa Implementation Analyst (Project Manager) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -190,7 +194,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436898-implementation-analyst-project-manager-mandarin-speaking-'>Visa Implementation Analyst - Project Manager (Mandarin speaking) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436898-implementation-analyst-project-manager-mandarin-speaking-'>Visa Implementation Analyst - Project Manager (Mandarin speaking) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -270,7 +274,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aciworldwide.referrals.selectminds.com/jobs/principal-project-manager-3093'>Principal Project Manager - ACI Worldwide Careers</a></h5> 
+<h5><a href='https://aciworldwide.referrals.selectminds.com/jobs/principal-project-manager-3093'>Principal Project Manager - ACI Worldwide Careers</a></h5> 
 <p><span class="badge badge-light">Taipei Taiwan</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -294,7 +298,17 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nmhc.referrals.selectminds.com/jobs/program-manager-patient-accounting-admin-full-time-days-33320'>Program Manager, Patient Accounting Admin, Full-Time Days - Northwestern Medicine Careers</a></h5> 
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/69633'>Senior Program Manager- Contract Manufacturing Performance ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 17, 2019 ... Senior Project Manager. Careers that Change Lives Impact patient outcomes. 
+Come for a job, stay for a career. Day in the life: ?Oversees and manages the?...</p>
+<hr/>
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/senior-transformation-program-manager-learning-and-development-69553'>Senior Transformation Program Manager, Learning and Development</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 16, 2019 ... Learning and Development Senior Transformation Program Manager. This role is 
+funded through April of 2022, with the intention to establish a permanent role?...</p>
+<hr/>
+<h5><a href='https://nmhc.referrals.selectminds.com/jobs/program-manager-patient-accounting-admin-full-time-days-33320'>Program Manager, Patient Accounting Admin, Full-Time Days - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -310,7 +324,7 @@
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/spotify/job/oztobfwl'>Financial Engineering Program Manager, Risk, and Controls ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/spotify/job/oztobfwl'>Financial Engineering Program Manager, Risk, and Controls ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 22, 2019 ... In this role, you'll work with the Product Area Leads of Financial Engineering, 
 helping to re-engineer the way Finance does business ? in a controlled way.</p>
@@ -351,7 +365,7 @@ helping to re-engineer the way Finance does business ? in a controlled way.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://lbl.referrals.selectminds.com/jobs/program-manager-electricity-markets-and-policy-group-2287'>Program Manager (Electricity Markets and Policy Group) - LBL Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/program-manager-electricity-markets-and-policy-group-2287'>Program Manager (Electricity Markets and Policy Group) - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -395,7 +409,7 @@ helping to re-engineer the way Finance does business ? in a controlled way.</p>
 <p><span class="badge badge-light">Midway, FL</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698407374-construction-project-manager-seattle-washington'>Turner & Townsend Construction Project Manager ? Seattle, Washington | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698407374-construction-project-manager-seattle-washington'>Turner & Townsend Construction Project Manager ? Seattle, Washington | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington Seattle, Washington  Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -429,7 +443,7 @@ helping to re-engineer the way Finance does business ? in a controlled way.</p>
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.ucf.edu/en-us/job/497708/technical-program-manager-bridg'>Jobs at UCF- Details - Technical Program Manager - BRIDG</a></h5> 
+<h5><a href='https://jobs.ucf.edu/en-us/job/497708/technical-program-manager-bridg'>Jobs at UCF- Details - Technical Program Manager - BRIDG</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -444,18 +458,6 @@ helping to re-engineer the way Finance does business ? in a controlled way.</p>
 <h5><a href='http://kargo.applytojob.com/apply/VqRGhv49o3/Technical-Project-Manager'>Technical Project Manager - Kargo - Career Page</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ergeon/jobs/4196398002'>Job Application for Project Manager at Ergeon</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://fticonsult.referrals.selectminds.com/jobs/forensic-litigation-consulting-programme-manager-senior-director-8242'>Forensic & Litigation Consulting - Programme Manager - Senior Director - FTI Consulting Inc Careers</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.crh.com/CRH_Americas/job/Telford-Project-Manager-%28Precast-Concrete%29-Telford%2C-PA-PA-18969/565136901/?locale=en_US&applySourceOverride=twitter'>Project Manager (Precast Concrete) - Telford, PA</a></h5> 
-<p><span class="badge badge-light">United States Canada United States Canada</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
